--- a/JpMorganBankApi/src/main/resources/application.properties
+++ b/JpMorganBankApi/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/demo_accounts?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=7812
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_accounts
+spring.datasource.password=@Ndy021003
+spring.datasource.url=jdbc:mysql://localhost:3333/bankingDb
 # Show or not log for each sql query in the console
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
